--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.1-0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
