--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
