Feat: Update npm-publish.yml

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,7 +32,8 @@ jobs:
         run: yarn install
 
       - name: Build
-        run: yarn build
+        run: yarn build:dev
+        
 
       - name: Docker build & push to hub
         run: |
