Feat: Update npm-publish.yml

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,14 +25,14 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Yarn
-        run: npm install -g yarn
+      # - name: Install Yarn
+      #   run: npm install -g yarn
 
-      - name: Install dependencies
-        run: yarn install
+      # - name: Install dependencies
+      #   run: yarn install
 
       - name: Build
-        run: yarn build:dev
+        run: yarn build
         
 
       - name: Docker build & push to hub
