--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.1-0",
